--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "font-awesome": "^4.7.0",
+    "icheck": "^1.0.2",
     "jquery": "^3.3.1",
     "metismenu": "^2.7.4",
     "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
+    "react-icheck": "^0.3.8",
     "react-js-pagination": "^3.0.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
